...
            >

        <Button
                android:text="@string/btn_next_fragment"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:id="@+id/btn_fg_next"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/img_fg_sample"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="@+id/img_fg_sample"
                style="@style/Widget.AppCompat.Button.Colored"/>
...
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_launcher_foreground"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_fg1_text"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_fg1"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_fg_next"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
...
