...
                app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
                android:text="@string/btn_begin_fragment"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:id="@+id/btn_fg3_begin"
                style="@style/Widget.AppCompat.Button.Colored"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
...

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText_fr3_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_fg3_back"
                tools:text="Type something"
...
