...
                app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
                android:text="@string/btn_next_fragment"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:id="@+id/btn_fg2_next"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginBottom="8dp"
...
